assets/css/custom_main.css
/* MAIN CSS STYLESHEET* /

/* ========================================
GLOBAL
======================================== */
/*RESET EVERYTHING*/
* {
    margin: 0;
    padding: 0;
}

html {
    height: 100%;
}

.clearfix:after {
    content: "";
    display: table;
    clear: both;
}

body {
    color: #80878c;
    background: #f7f9f8;
    /*font-family: "Source Sans Pro", sans-serif;*/
    font-family: Raleway , Open-sans, sans-serif;
    font-size: 16px;
    -webkit-font-smoothing: antialiased;
    height: 100%;
    margin: 0;
}

h1, h2, h3, h4, h5, h6 {
    color: #3dabee;
}

a {
}

#content {
    margin-top: 50px;
    min-height: 1000px;
}

.wrapper {
    max-width: 1100px;
    margin: 0 auto;
}
section {
    margin-top: 50px;
}
section:first-of-type {
    margin-top: 0;
}
section .intro-text {
    text-align: center;
    margin-bottom: 50px;
}
section .intro-text h1 {
    color: #525252;
    font-size: 45px;
    margin-bottom: 30px;
}
section .intro-text p {
    color: #aeaeae;
    font-size: 20px;
}

.btn {
    background: #333;
    color: #fff;
    font-weight: bold;
    font-size: 14px;
    border-radius: 4px;
    display: inline-block;
    padding: 10px 20px;
    margin-right: 10px;
}
.button:hover {
    background: #3dabee;
}


/* ========================================
** INTRO SECTION
======================================== */
section#intro {
    /*background: linear-gradient(#ffa949, transparent 50%),*/
    /*linear-gradient(0deg, #fff, transparent),*/
    /*#ffa949 ;*/
    background: #3dabee;
    background-image: url('../img/bg_mask_white.png');
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
}
.icon-bram {
    /*-webkit-border-radius: 50%;*/
    /*-moz-border-radius: 50%;*/
    border-radius: 50%;
    width: 150px;
    height: 150px;
    background: white;
    border: 2px solid white;
}
section#intro .content {

}
section#intro .content h1 {
    font-weight: bold;
    color: white;
    font-size: 82px;
    letter-spacing: -3px;
    text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
    margin: 50px 0;
}
section#intro .content p {
    color: white;
    font-size: 24px;
    margin: 0 0 10px 0;
    text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
    -webkit-font-smoothing: subpixel-antialiased;
}
section#intro .scroll-down {
    position: absolute;
    bottom: 0;
    width: 100%;
    margin: 0 auto;
    text-align: center;
    color: white;
    font-size: 16px;
    color: #90cef5;
    font-style: italic;
}
section#intro .scroll-down img {
    width: 25px;
    height: 25px;
    margin-top: 10px;
}

/* ========================================
** PROJECTS SECTION
======================================== */
section#projects #projects-container .mix {
    display: none;
}

section#projects .projects-filter {
    float: right;
    margin-bottom: 30px;
}

section#projects .projects-filter .filter.btn:first-of-type {
    margin-left: 10px;
}
section#projects .projects-filter .filter.btn:last-of-type {
    margin-right: 0;
}
section#projects  .projects-filter .filter.btn.active {
    background: #3dabee;
}

/* START TEST ------------------------------------------------------------------- */

.project-container {
    text-align: justify;
    font-size: 0.1px;
    -webkit-backface-visibility: hidden;
    clear: both;
}

.project-container:after {
    content: '';
    display: inline-block;
    width: 100%;
}

.project-container .mix,
.project-container .gap {
    display: inline-block;
    width: 49%;
}

.project-container .project {
    text-align: left;
    background: #3dabee;
    margin-bottom: 15px;
    display: none;
    border-radius: 4px;
    -moz-box-shadow: 0 1px 2px #aaa;
    -webkit-box-shadow: 0 1px 2px #aaa;
    box-shadow: 0 1px 2px #aaa;
    height: 250px;
}
/*
## SETUP PROJECTS IMAGES
*/
.project-container .mix:nth-of-type(1) {
    background-image: url('../img/projects/bramreinold-portfolio-ronvanrielschilderwerken.jpg');
}

/*.container .mix:after{*/
    /*content: attr(data-myorder);*/
    /*color: white;*/
    /*font-size: 16px;*/
    /*display: inline-block;*/
    /*vertical-align: top;*/
    /*padding: 4% 6%;*/
    /*font-weight: 700;*/
/*}*/

/*.project-container .mix:before{*/
    /*content: '';*/
    /*display: inline-block;*/
    /*padding-top: 250px*/
/*}*/

@media all and (min-width: 420px){
    .project-container .mix,
    .project-container .gap{
        width: 32%;
    }
}

@media all and (min-width: 640px) {
    .project-container .mix,
    .project-container .gap {
        /*width: 23.5%;*/
        width: 32.5%;
    }
}

/*Projects hover setup*/
.project-hover {
    background-color: rgba(0,0,0,0.6);
    opacity: 0;
    width: 100%;
    height: 100%;
    border-radius: 4px;
}
.actions {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
}
.actions .btn {
    background: #3dabee;
    text-decoration: none;
}
.actions .btn:hover {
    background: #eeab48;
}

/* ========================================
**  HEADER
======================================== */
header {
    width: 100%;
    height: 50px;
    z-index: 999;
    background: #fff;
    box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
}
header .header-wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 100%;
}
nav#main-menu ul {
    list-style-type:  none;
}
nav#main-menu ul li {
    padding: 0 20px;
    display: inline-block;
}
nav#main-menu ul li:last-child {
    padding-right: 0;
}
nav#main-menu ul li a {
    text-decoration: none;
    color: #aeaeae;
}
nav#main-menu ul li a:hover {
    color: #3dabee;
}
nav#main-menu ul li a.active {
    color: #3dabee;
    font-weight: bold;
}

/* ========================================
** FOOTER
======================================== */
footer {
    background: white;
    width: 100%;
    height: 100px;
    display: flex;
    align-items: center;
    justify-content: center;
}

/**
## Media queries - for making the website responsive
**/

@media all and ( min-width: 600px ) {

    /* set column widths */
    .col-2-3 {
        width: 66.66%;
    }
    .col-1-2 {
        width: 50%;
    }
    .col-1-3 {
        width: 33.33%;
    }
    .col-1-4 {
        width: 25%;
    }
    .col-1-8 {
        width: 12.5%;
    }

}

